<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:background="#222222"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bluetooth_connect"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/bluetooth_connect"
        android:textColor="#bcbcbc"
        android:textSize="18sp" />

    <View
        android:layout_width="160dp"
        android:layout_height="0.5dp"
        android:background="#bcbcbc" />

    <TextView
        android:id="@+id/com_connect"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/com_connect"
        android:textColor="#bcbcbc"
        android:textSize="18sp" />

    <View
        android:layout_width="160dp"
        android:layout_height="0.5dp"
        android:background="#bcbcbc" />

    <TextView
        android:id="@+id/disconnect"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/disconnect"
        android:textColor="#bcbcbc"
        android:textSize="18sp" />

</LinearLayout>