<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/complete_warning_rl"
                android:background="@color/white"
                android:layout_width="fill_parent"
                android:visibility="gone"
                android:layout_below="@+id/warning_title"
                android:layout_height="fill_parent">
    <LinearLayout
            android:layout_margin="20dp"
            android:id="@+id/part_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/warning_signal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#cc0080ee"/>

            <TextView
                    android:id="@+id/warning_point_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/warning_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/warning_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#cc0080ee"/>

            <TextView
                    android:id="@+id/warning_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/warning_deal_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_below="@+id/part_top"
            android:id="@+id/old_date"
            android:layout_margin="20dp"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/old_date_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:id="@+id/old_date_list_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:id="@+id/old_date_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    <RadioGroup
            android:layout_margin="20dp"
            android:layout_below="@+id/old_date"
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_x="2px" >
        <RadioButton
                android:id="@+id/radio_button_void"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deal_way_void"
                />
        <RadioButton
                android:id="@+id/radio_button_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deal_way_first"
                />
        <RadioButton
                android:id="@+id/radio_button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deal_way_add"
                />

    </RadioGroup>

    <EditText android:layout_width="100dp"
              android:id="@+id/add_edit"
              android:layout_alignBottom="@+id/radio_group"
              android:layout_toRightOf="@+id/radio_group"
              android:gravity="center"
              android:textSize="20sp"
              android:layout_height="40dp"/>
    <TextView android:layout_width="wrap_content"
              android:layout_alignBottom="@+id/radio_group"
              android:layout_toRightOf="@+id/radio_group"
              android:layout_marginLeft="110dp"
              android:text="毫米"
              android:gravity="center"
              android:textSize="20sp"
              android:layout_height="40dp"/>

    <EditText
            android:id="@+id/warning_remark"
            android:layout_below="@+id/radio_group"
            android:layout_marginTop="20dp"
            android:layout_margin="10dp"
            android:gravity="top|left"
            android:padding="5dp"
            android:layout_width="fill_parent"
            android:layout_height="100dp"/>

    <LinearLayout
            android:id="@+id/warning_bottom"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/warning_remark">

        <Button
                android:id="@+id/complete_cancel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="20sp"
                android:text="取消"
                android:layout_weight="1" />
        <Button
                android:id="@+id/complete_ok"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="确定"/>
    </LinearLayout>


</RelativeLayout>